fix:button not showing in first launch

--- a/user.css
+++ b/user.css
@@ -1888,8 +1888,8 @@ option {
 }
 
 .main-playButton-PlayButton>button {
- width: var(--size);
- height: var(--size);
+ width: 40px;
+ height: 40px;
 }
 
 .main-playButton-PlayButton>button>span {
